--- a/partials/header.html
+++ b/partials/header.html
@@ -9,3 +9,9 @@
         <li class="nav-list-item"><a href="favorites/favorites.html" class="nav-link">Favorites</a></li>
     </ul>
 </nav>
+
+<button class="nav-toggle" id="nav-toggle">
+    <div class="nav-toggle-bar"></div>
+    <div class="nav-toggle-bar"></div>
+    <div class="nav-toggle-bar"></div>
+</button>
