--- a/partials/footer.html
+++ b/partials/footer.html
@@ -10,8 +10,8 @@
 <div class="footer-social">
     <h4>Follow Us</h4>
     <div class="footer-social-links">
-        <a href="#"><img src="images/facebook-icon.svg" alt="Go to Facebook"></a>
-        <a href="#"><img src="images/instagram-icon.svg" alt="Go to Instagram"></a>
-        <a href="#"><img src="images/twitter-icon.svg" alt="Go to Twitter"></a>
+        <a href="#"><img src="/images/facebook-icon.svg" alt="Go to Facebook"></a>
+        <a href="#"><img src="/images/instagram-icon.svg" alt="Go to Instagram"></a>
+        <a href="#"><img src="/images/twitter-icon.svg" alt="Go to Twitter"></a>
     </div>
 </div>
