--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,12 @@
 <div class="header-logo-container">
-    <img src="/images/IUM Gallery Logo White.webp" alt="IUM Logo">
+    <img src="../images/IUM Gallery Logo White.webp" alt="IUM Logo">
 </div>
 <nav class="nav" id="nav">
     <ul class="nav-list">
-        <li class="nav-list-item"><a href="/index.html" class="nav-link">Home</a></li>
-        <li class="nav-list-item"><a href="/search/search.html" class="nav-link">Search</a></li>
-        <li class="nav-list-item"><a href="/artists/artists.html" class="nav-link">Artists</a></li>
-        <li class="nav-list-item"><a href="/favorites/favorites.html" class="nav-link">Favorites</a></li>
+        <li class="nav-list-item"><a href="../index.html" class="nav-link">Home</a></li>
+        <li class="nav-list-item"><a href="../search/search.html" class="nav-link">Search</a></li>
+        <li class="nav-list-item"><a href="../artists/artists.html" class="nav-link">Artists</a></li>
+        <li class="nav-list-item"><a href="../favorites/favorites.html" class="nav-link">Favorites</a></li>
     </ul>
 </nav>
 
