--- a/styles/style.css
+++ b/styles/style.css
@@ -589,18 +589,6 @@ main{
     width: 100%;
     height: 200px;
     object-fit: cover;
-    background-color: #000;
-}
-
-.no-image {
-    background: #000;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-    width: 100%;
-    font-size: 0.9rem;
 }
 
 .result-card h3{
@@ -638,4 +626,46 @@ main{
 .pagination button:disabled{
     background-color: var(--color-muted);
     cursor: default;
+}
+
+/* artwork details */
+
+.artwork-detail-section{
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+
+.artwork-image-container{
+    max-height: 600px;
+    margin-bottom: 5rem;
+}
+
+.artwork-image-container img{
+    width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    filter: drop-shadow(0 0 20px rgba(0, 0, 0, .6));
+}
+
+.artwork-details-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.artwork-details-container h2{
+    font-size: var(--font-size-xlarge);
+    color: var(--color-primary);
+}
+
+.details-info{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.details-info strong{
+    font-weight: 600;
 }
